my-k8s/traefik-ingress/sts-about.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-about
  namespace: my-ingress  
spec:
  serviceName: sts-about-headless
  replicas: 1
  selector:
    matchLabels:
      app: sts-about
  template:
    metadata:
      labels:
        app: sts-about
    spec:
      containers:
        - name: nginx
          image: nginx:1.26.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sts-about-svc
  namespace: my-ingress
spec:
  type: ClusterIP
  # clusterIP: None
  selector:
    app: sts-about
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: sts-about # singular since it points to a single cluster IP
# spec:
#   type: ClusterIP
#   selector:
#     app: sts-about
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
